# mundi.ai

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.basedpyright/: baseline.json
.github/workflows/: ci.yml  cicd.yml  lint.yml
alembic/versions/: 1e7729123b46_add_remote_url_column_to_map_layers.py  486828ee76a2_add_basemap_column_to_user_mundiai_maps.py
docs/: astro.config.mjs  package-lock.json  package.json
frontendts/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontendts/src/: App.tsx  main.tsx
qgis-processing/: server.py
src/: dag.py  fs_lru.py  openapi.py  openstreetmap.py  structures.py  test_basemap.py  test_context_length_error.py  test_conversation_integration.py  test_duckdb_query_from_kue.py  test_empty_upload.py  test_gdal.py  test_gdal_api.py  test_kml_samples.py  test_map_api.py  test_mbgl_renderer.py  test_message_loop.py  test_messages.py  test_postgres_connection_deletion.py  test_postgres_error_database_tracking.py  test_project_api.py  test_remote_uri_mock.py  test_room.py  test_send_new_conversation.py  test_upload_kml_kmz.py  test_url_validation.py  test_websocket.py  test_zip_shapefile.py  test_zoom_integration.py  utils.py  wsgi.py
src/database/: models.py
src/dependencies/: base_map.py  dag.py  database_documenter.py  layer_describer.py  postgis.py  postgres_connection.py  pydantic_tools.py  system_prompt.py
src/renderer/: render.js
src/tools/: pyd.py  (+2 more)
test_fixtures/: esri_pool_permits_sample.esri.json  singlepoint.fgb  ukraine.fgb
(+54 files in other folders)
